[package]
name = "pbft_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2.8", features = ["derive"] }
public-ip = "0.2"
futures = "0.3"
log = "0.4"
env_logger = "0.7"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }

impls = "1"
tokio-util = { version = "0.6", features = ["codec"] }
static_assertions = "1.1.0"
serde_json = "1.0"
tokio-serde = { version = "0.8", features = ["json"] }

hex = "0.3.0"
p256 = "0.9.0"
rand_core="0.6.3"
ring = "0.16.20"
sha2 = "0.9.8"
digest = "0.9.0"
lazy_static = "1.4.0"

bincode = "1.0"